--- a/admin.html
+++ b/admin.html
@@ -26,6 +26,7 @@
     </nav>
   </header>
 
+ 
   <main class="container">
     <div id="login-panel" class="card" style="display: none;">
       <h2>Admin Login</h2>
@@ -66,18 +67,18 @@
             <input id="add-discount" value="0">
           </div>
           <div>
-            <label>Image URLs (comma separated)</label>
-            <textarea id="add-images" required placeholder="https://...jpg, https://...png"></textarea>
+            <label>Image URLs (comma-separated)</label>
+            <input id="add-images" required>
           </div>
         </div>
         <div class="row">
           <div>
             <label>Category</label>
             <select id="add-category" required>
-              <option value="keycaps">Keycaps</option>
-              <option value="switches">Switches</option>
-              <option value="keyboard-barebones">Keyboard and Barebones</option>
-              <option value="collectables">Collectables</option>
+              <option value="Keycaps">Keycaps</option>
+              <option value="Switches">Switches</option>
+              <option value="Keyboards and Barebones">Keyboards and Barebones</option>
+              <option value="Accessories and Collectables">Accessories and Collectables</option>
             </select>
           </div>
           <div>
@@ -154,4 +155,5 @@
     </div>
   </main>
 </body>
+
 </html>
