--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
   </script>
   <script type="module" src="script.js"></script>
+
 </head>
 <body>
   <header class="site-header">
@@ -27,45 +28,35 @@
     </nav>
   </header>
 
-  <main class="container">
+ <main class="container">
     <h1>Welcome to The Geek Shop</h1>
 
     <h2>May Interest You</h2>
-    <div id="interest-products" class="product-list">
-      <div class="shimmer-card"></div>
-      <div class="shimmer-card"></div>
-      <div class="shimmer-card"></div>
-      <div class="shimmer-card"></div>
-      <div class="shimmer-card"></div>
-    </div>
+    <div id="interest-products" class="product-list new-hot-list"></div>
 
     <h2>Categories</h2>
-    <div class="categories-grid">
-      <a href="products.html?category=keycaps" class="category-button keycaps card" style="background-image: url('keycaps.jpg'); background-size: cover; background-position: center;">Keycaps</a>
-      <a href="products.html?category=switches" class="category-button switches card" style="background-image: url('switches.jpg'); background-size: cover; background-position: center;">Switches</a>
-      <a href="products.html?category=keyboard-barebones" class="category-button keyboard-barebones card" style="background-image: url('keyboards.jpg'); background-size: cover; background-position: center;">Keyboard and Barebones</a>
-      <a href="products.html?category=collectables" class="category-button collectables card" style="background-image: url('collectables.jpg'); background-size: cover; background-position: center;">Collectables</a>
-    </div>
+    <div id="categories" class="product-list new-hot-list"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
-    <button id="close-viewer" class="close-viewer">×</button>
+    <button id="close-viewer" class="close-viewer">&times;</button>
     <img id="viewer-img" src="" alt="">
   </div>
 
-  <footer class="site-footer">
-    <div>
-      <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-        <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-      </a>
-      <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-        <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
-      </a>
-    </div>
-    <p>© All rights reserved by The Geek Shop</p>
-  </footer>
+<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
+  <div>
+    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
+    </a>
+    <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
+      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+        <a href="https://wa.me/01960788862" target="_blank" style="margin: 0 10px;">
+      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
+    </a>
+  </div>
+ 
+  <p>&copy; All rights reserved by The Geek Shop</p>
+</footer>
 </body>
 </html>
